--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ mainClassName = 'seedu.address.MainApp'
 allprojects {
     apply plugin: 'idea'
     apply plugin: 'java'
+    apply plugin: 'application'
     apply plugin: 'jacoco'
     apply plugin: 'checkstyle'
 
@@ -63,6 +64,9 @@ allprojects {
         compile "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
         compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonDataTypeVersion"
         compile "com.google.guava:guava:$guavaVersion"
+        compile "com.google.api-client:google-api-client:1.22.0"
+        compile "com.google.oauth-client:google-oauth-client-jetty:1.22.0"
+        compile "com.google.apis:google-api-services-calendar:v3-rev241-1.22.0"
 
         testCompile "junit:junit:$junitVersion"
         testCompile "org.testfx:testfx-core:$testFxVersion"
